--- a/week1/tailwindcards/index.html
+++ b/week1/tailwindcards/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,20 +9,20 @@
   <body>
     <div class="">
       <figure class="">
-        <img class="" src="./images/mace.jpg" alt="" width="384" height="512" />
+        <img class="w-24 h-24 mt-16 rounded ring" src="./images/mace.jpg" alt="" width="384" height="512" />
         <div class="text-block">
           <blockquote>
-            <p class="quote-text">"This Party's Over."</p>
+            <p class="quote-text text-[#F2F4FE]">"This Party's Over."</p>
           </blockquote>
           <figcaption class="">
-            <div class="name-text">Mace Windu</div>
-            <div class="desc-text">Jedi Master, Coruscant</div>
+            <div class="name-text text-[#0E9AE9]">Mace Windu</div>
+            <div class="desc-text text-[#334155]">Jedi Master, Coruscant</div>
           </figcaption>
         </div>
       </figure>
       <figure class="">
         <img
-          class=""
+          class="w-24 h-24 mt-16 rounded ring"
           src="./images/anakin.jpg"
           alt=""
           width="384"
@@ -29,37 +30,35 @@
         />
         <div class="text-block">
           <blockquote>
-            <p class="quote-text">
+            <p class="quote-text text-[#F2F4FE]">
               "I don't like sand. It's coarse and rough and irritating and it
               gets everywhere. Not like here. Here everything is soft and
               smooth."
             </p>
           </blockquote>
           <figcaption class="">
-            <div class="name-text">Anakin Skywalker</div>
-            <div class="desc-text">Jedi Knight, Aalderan</div>
+            <div class="name-text text-[#0E9AE9]">Anakin Skywalker</div>
+            <div class="desc-text text-[#334155]">Jedi Knight, Aalderan</div>
           </figcaption>
         </div>
       </figure>
       <figure class="">
         <img
-          class=""
+          class="w-24 h-24 mt-16 rounded ring"
           src="./images/ahsoka.jpg"
           alt=""
-          width="384"
-          height="512"
         />
         <div class="text-block">
           <blockquote>
-            <p class="quote-text">
+            <p class="quote-text text-[#F2F4FE]">
               "If There's One Thing I've Learned From You, Master, It's That
               Following Direct Orders Isn't Always The Best Way To Solve A
               Problem."
             </p>
           </blockquote>
           <figcaption class="">
-            <div class="name-text">Ahsoka Tano</div>
-            <div class="desc-text">Padawan, Coruscant</div>
+            <div class="name-text text-[#0E9AE9]">Ahsoka Tano</div>
+            <div class="desc-text text-[#334155]">Padawan, Coruscant</div>
           </figcaption>
         </div>
       </figure>
