--- a/week1/mymails-part1/uikit.html
+++ b/week1/mymails-part1/uikit.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Varela+Round&display=swap"
+    rel="stylesheet">
   <title>My Mails</title>
 </head>
 
@@ -16,13 +18,20 @@
       <div class="card">
         <span class="titre">TYPOGRAPHY</span>
         <div class="content" id="typography">
-          <!-- Add your typography here -->
+          <h1 class="logo-text">LOGO content</h1>
+          <h6>Title content</h6>
+          <p>Mail content</p>
         </div>
       </div>
       <div class="card">
         <span class="titre">IMAGES</span>
         <div class="content" id="images">
-          <!-- Add your images here -->
+          <img class="logo" src="images/logomymails.png" />
+          <img class="avatar" src="images/avatar-1.jpg" />
+          <img class="avatar" src="images/avatar-2.jpg" />
+          <img class="avatar" src="images/avatar-3.jpg" />
+          <img class="avatar" src="images/avatar-4.jpg" />
+          <img class="avatar" src="images/avatar-5.jpg" />
         </div>
       </div>
     </div>
@@ -30,7 +39,11 @@
       <div class="big-card">
         <span class="titre">BUTTONS & INPUTS</span>
         <div class="content" id="buttonsandinputs">
-          <!-- Add your buttons and inputs here -->
+          <button type="button" id="btn-search">Search</button>
+          <button type="button" id="btn-add"></button>          
+          <span class="delete">✖</span>
+          <input id="add-message" type="text" placeholder=" ✉️ New message" />
+          <input id="search-message" type="text" placeholder=" 🔎 Search message..." />
         </div>
       </div>
     </div>
