--- a/week1/mymails-part1/index.html
+++ b/week1/mymails-part1/index.html
@@ -42,8 +42,8 @@
         
         <div id="content-right"> CONTENT RIGHT
 
-            <div id="compteur">Compteur
-            <span id="count">5</span>
+            <div id="compteur"><span>Nombre de messages :
+            <span id="count">5</span></span>
             </div>
 
 
