--- a/week2/mymails-part2/index.html
+++ b/week2/mymails-part2/index.html
@@ -109,6 +109,7 @@
 
     <div id="footer">
       <span>@LaCapsule - Made with 💙</span>
+      <span id='date'></span>
     </div>
   </div>
 <script src="script.js"></script>
