--- a/week2/mymails-part3/index.html
+++ b/week2/mymails-part3/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <script src="script.js" defer></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -111,7 +112,6 @@
       <span>@LaCapsule - Made with 💙</span>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 
 </html>
