--- a/week1/makeyouruikit/index.html
+++ b/week1/makeyouruikit/index.html
@@ -16,18 +16,65 @@
         <span class="title">Colors</span>
         <div class="content row">
           <!-- Insert code here -->
+          <div class="color" id="dGrey"></div>
+          <div class="color" id="grey"></div>
+          <div class="color" id="dBlue"></div>
+          <div class="color" id="blue"></div>
+          <div class="color" id="lBlue"></div>
         </div>
       </div>
       <div class="card">
         <span class="title">Buttons</span>
         <div class="content">
           <!-- Insert code here -->
+          <a class="btn"></a>
         </div>
       </div>
       <div class="card">
         <span class="title">Table</span>
         <div class="content">
           <!-- Insert code here -->
+          <table>
+            <thead>
+              <tr>
+                <th>Colonne 1</th>
+                <th>Colonne 2</th>
+                <th>Colonne 3</th>
+                <th>Colonne 4</th>
+                <th>Colonne 5</th>
+             </tr>
+           </thead>
+           <tbody>
+             <tr>
+               <td>Ligne 1, Colonne 1</td>
+               <td>Ligne 1, Colonne 2</td>
+               <td>Ligne 1, Colonne 3</td>
+               <td>Ligne 1, Colonne 4</td>
+               <td>Ligne 1, Colonne 5</td>
+             </tr>
+             <tr>
+               <td>Ligne 2, Colonne 1</td>
+               <td>Ligne 2, Colonne 2</td>
+               <td>Ligne 2, Colonne 3</td>
+               <td>Ligne 2, Colonne 4</td>
+               <td>Ligne 2, Colonne 5</td>
+             </tr>
+             <tr>
+               <td>Ligne 3, Colonne 1</td>
+               <td>Ligne 3, Colonne 2</td>
+               <td>Ligne 3, Colonne 3</td>
+               <td>Ligne 3, Colonne 4</td>
+               <td>Ligne 3, Colonne 5</td>
+             </tr>
+             <tr>
+               <td>Ligne 4, Colonne 1</td>
+               <td>Ligne 4, Colonne 2</td>
+               <td>Ligne 4, Colonne 3</td>
+               <td>Ligne 4, Colonne 4</td>
+               <td>Ligne 4, Colonne 5</td>
+            </tr>
+           </tbody>
+          </table>
         </div>
       </div>
     </div>
