--- a/week3/weatherapp-part4/frontend/index.html
+++ b/week3/weatherapp-part4/frontend/index.html
@@ -16,8 +16,8 @@
       <button id="addCity"><img id="glass" src="images/glass.png" /></button>
     </div>
 
-    <a id="userButton">
-      <img id="userIcon" src="images/user.png" />
+    <a href='login.html' id="userButton">
+      <img id="userIcon" src="images/user.png" href=" "/>
     </a>
   </div>
 
