--- a/week3/weatherapp-part4/frontend/login.html
+++ b/week3/weatherapp-part4/frontend/login.html
@@ -7,7 +7,8 @@
 
 <body>
   <div id="header">
-    <a id="homeButton">
+    <a href="index.html"  id="homeButton">
+
       <img id="logo" src="images/logo.svg" />
     </a>
   </div>
